--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body,
     margin: 0;
     height: 100%;
     width: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 #container_indicators {
@@ -17,11 +17,14 @@ body,
 }
 
 .indicator_value {
-    height: calc(100%/6);
+    height: calc(100%/8);
 }
 
 #container_charts {
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     /* width: 100%; */
 }
 
@@ -32,4 +35,18 @@ body,
     /* used this for multiple child */
     align-items: center;
     /* if an only child */
+}
+
+#score_ots {
+    /* height: 100vh !important;
+    width: 100% !important; */
+}
+
+#survey_pie {
+    height: 50%;
+}
+
+#ots_resumen {
+    height: 50%;
+    width: 100%;
 }
